--- a/yanks/frameworks.yaml
+++ b/yanks/frameworks.yaml
@@ -8,8 +8,8 @@ yanks:
     License: "MIT"
     Destination: "frameworks"
     Source:
-      handlebars.runtime-1.b6.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.0.beta.6"
-      handlebars.main-1.b6.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.0.beta.6.js"
+      # handlebars.runtime-1.b6.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.0.beta.6"
+      # handlebars.main-1.b6.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.0.beta.6.js"
       handlebars.runtime-1.0.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.rc.1.js"
       handlebars.main-1.0.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.rc.1.js"
       handlebars.runtime-stable.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.rc.1.js"
@@ -22,7 +22,6 @@ yanks:
         handlebars.runtime-trunk.js: "dist/handlebars.runtime.js"
         handlebars.main-trunk.js: "dist/handlebars.js"
 
-
   # Jquery
   # XXX - https please!
   jquery:
@@ -30,17 +29,34 @@ yanks:
     Destination: "frameworks"
     Source:
       jquery-1.7.js: "http://code.jquery.com/jquery-1.7.js"
-      jquery-1.8.js: "http://code.jquery.com/jquery-1.8.2.js"
-      jquery-stable.js: "http://code.jquery.com/jquery-1.8.2.js"
+      jquery-1.8.js: "http://code.jquery.com/jquery-1.8.3.js"
+      jquery-stable.js: "http://code.jquery.com/jquery-1.8.3.js"
       jquery-trunk.js: "http://code.jquery.com/jquery-git.js"
+
+  zepto:
+    License: ["MIT"]
+    Destination: "frameworks"
+    Source:
+      zepto-1.0.zip: "https://github.com/madrobby/zepto/archive/v1.0rc1.zip"
+      zepto-stable.js: "git@github.com:jsBoot/zepto.git"
+      # zepto-trunk.js: "git@github.com:madrobby/zepto.git"
+    Build:
+      args: "rake; cd ../../zepto; rake"
+      type: "sh"
+      dir: "v1.0rc1/zepto-1.0rc1"
+      production:
+        zepto-1.0.js: "dist/zepto.js"
+        zepto-stable.js: "../../zepto/dist/zepto.js"
+
+
 
   # Ember
   ember:
     License: "MIT"
     Destination: "frameworks"
     Source:
-      ember.prod-0.9.6.js: "https://github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"
-      ember.debug-0.9.6.js: "https://github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
+      # ember.prod-0.9.6.js: "https://github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"
+      # ember.debug-0.9.6.js: "https://github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
       ember.prod-1.0.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.min.js"
       ember.debug-1.0.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.js"
       ember.prod-stable.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.min.js"
@@ -81,8 +97,8 @@ yanks:
     Destination: "frameworks"
     Source:
       # backbone-stable.js: "http://backbonejs.org/backbone.js"
-      backbone-0.9.js: "https://raw.github.com/documentcloud/backbone/0.9.2/backbone.js"
-      backbone-stable.js: "https://raw.github.com/documentcloud/backbone/0.9.2/backbone.js"
+      backbone-0.9.js: "https://raw.github.com/documentcloud/backbone/0.9.9/backbone.js"
+      backbone-stable.js: "https://raw.github.com/documentcloud/backbone/0.9.9/backbone.js"
       backbone-trunk.js: "https://raw.github.com/documentcloud/backbone/master/backbone.js"
 
   # XXX - no proper version
